--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -11,7 +12,7 @@ body {
     background: #f9f9f9;
     min-height: 100vh;
     overflow-x: hidden;
-    overflow-y: inherit;
+    /* overflow-y: inherit; */
 }
 
 header {
